  * Detect the slashdot lookup for RENAME or REMOVE (from HEAD)
     - 000_rename.diff

  [ Luca Favatella ]
  * Drop patches
     - 000_ext2fs.diff and 017_oss_compat.diff applied upstream
     - 005_binutils.diff applied upstream (with mov instead of movw)
     - 911_no_werror.diff dropped (because useless)
  * Partially drop and refresh the rest
     - 001_misc.diff

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 25 Nov 2009 12:00:00 +0100

kfreebsd-7 (7.2-9) unstable; urgency=high

  [ Petr Salinger ]
  * Fix Devfs / VFS NULL pointer race condition
    (FreeBSD-SA-09:14.devfs). Closes: #549871.
  * Add no zero mapping feature
    (FreeBSD-EN-09:05.null).

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 06 Oct 2009 16:26:08 +0200

kfreebsd-7 (7.2-8) unstable; urgency=low

  [ Petr Salinger ]
  * Extend 904_dev_full.diff to support non-blocking mode
    of /dev/full, /dev/null, /dev/zero

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 13 Sep 2009 00:17:20 +0200

kfreebsd-7 (7.2-7) unstable; urgency=low

  * Don't ship /boot/kernel, but create it in the postinst if symlinks are
    enabled.
  * Add 914_psm.diff to debian/series.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 31 Aug 2009 22:05:09 +0200

kfreebsd-7 (7.2-6) unstable; urgency=low

  [ Aurelien Jarno ]
  * Really build the ZFS module.
  * Enable TMPFS, it is need early in the boot process. 
  * Add debian/README.source.
  * Align modules load address on pages.

  [ Petr Salinger ]
  * Enhance 007_clone_signals.diff
  * Drop .comment section from kernel modules on !amd64

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 30 Aug 2009 15:20:36 +0200

kfreebsd-7 (7.2-5) unstable; urgency=low

  * Build the ZFS module, and at a README.Debian explaining it may not
    be legaly possible to load both ext2fs.ko and zfs.ko at the same time.
  * Add basic support for /etc/kernel-img.conf (do_symlinks, preinst_hook,
    prerm_hook, postinst_hook, postrm_hook), to be able to call update-grub