@@ -1,7 +1,7 @@
 --- src.orig/sys/conf/ldscript.amd64
 +++ src/sys/conf/ldscript.amd64
 @@ -1,12 +1,12 @@
- /* $FreeBSD: src/sys/conf/ldscript.amd64,v 1.9.30.1.2.1 2009/10/25 01:10:29 kensmith Exp $ */
+ /* $FreeBSD$ */
 -OUTPUT_FORMAT("elf64-x86-64", "elf64-x86-64", "elf64-x86-64")
 +OUTPUT_FORMAT("elf64-x86-64-freebsd", "elf64-x86-64-freebsd", "elf64-x86-64-freebsd")
  OUTPUT_ARCH(i386:x86-64)
