@@ -1,29 +1,0 @@
-#!/bin/bash
-set -ex
-
-ANONCVS=anoncvs@anoncvs.fr.freebsd.org:/home/ncvs
-RELENG=RELENG_8_0_0_RELEASE
-
-rm -rf src
-
-if test -e src.tar.bz2 ; then
-  tar -xjpf src.tar.bz2
-  action="update"
-else
-  action="checkout"
-fi
-
-for i in src/{sys,usr.sbin/config} ; do
-  cvs -d $ANONCVS ${action} -r $RELENG $i
-  test -e $i
-done
-
-grep ^src/ debian/copyright | xargs rm -rf
-
-# assert that no non-free objects were left unremoved
-[ "`find src -name \*.o.uu | wc -l`" = "0" ]
-
-rm -f src.tar.bz2
-tar -cjpf src.tar.bz2 src/
-
-rm -rf src
