@@ -20,7 +20,11 @@ kfreebsd-8 (8.0-1) UNSTABLE; urgency=low
   * Partially drop and refresh the rest
      - 001_misc.diff
 
- -- Aurelien Jarno <aurel32@debian.org>  Wed, 25 Nov 2009 12:00:00 +0100
+  [ Aurelien Jarno ]
+  * Add a get-orig-source target to debian/rules and stop using a tar in
+    tar system.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Thu, 26 Nov 2009 03:31:51 +0100
 
 kfreebsd-7 (7.2-9) unstable; urgency=high
 
